--- a/package.json
+++ b/package.json
@@ -10,6 +10,15 @@
     "astro": "astro"
   },
   "dependencies": {
-    "astro": "^2.8.0"
+    "@astrojs/react": "^2.2.1",
+    "@types/react": "^18.2.14",
+    "@types/react-dom": "^18.2.6",
+    "astro": "^2.8.0",
+    "marked": "^5.1.1",
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0",
+    "react-markdown": "^8.0.7",
+    "showdown": "^2.1.0",
+    "swr": "^2.2.0"
   }
 }
